# Jarvis

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  Jarvis.e4p  Jarvis.sln  README.md  admin.py  config.py  config.yaml  config.yaml.example  jarvis.code-workspace  jarvis.py
JarvisClient/: App.config  CommandHandler.cs  JarvisClient.cs  JarvisClient.csproj  packages.config
JarvisClient/Modules/: RoleManager.cs
JarvisClient/Properties/: AssemblyInfo.cs
_eric6project/: Jarvis.e4q  Jarvis.e5s  Jarvis.e6t
config/: config_manager.py  config_model.py  file_config.py
data/: base_config.json
migrations/: down.sql  up.sql
python/: admin.py  jarvis.py
src/: config.rs  main.rs
src/db/: mysql.rs
src/model/: guild.rs
