[package]
name = "jarvis"
version = "0.1.0"
edition = "2018"

[dependencies]
serenity = { version = "*", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
tokio = { version = "1.0", features = ["full"] }
serde_yaml = "*"
serde = "*"
mysql = "*"
fstrings = "*"
simple-error = "*"
lazy_static = "*"